[project]
name = "modelsmith"
version = "0.7.0"
description = "Get Pydantic models and Python types as LLM responses from Anthropic, Google Vertex AI, and OpenAI models."
authors = [{ name = "Christo Olivier", email = "mail@christoolivier.com" }]
requires-python = "~=3.10.0"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Christo Olivier", email = "mail@christoolivier.com" }]
keywords = [
    "anthropic",
    "openai",
    "vertexai",
    "pydantic",
    "models",
    "types",
    "llm",
]
dependencies = [
    "google-genai>=1.36.0",
    "anthropic>=0.67.0",
    "openai>=1.107.2",
    "jinja2>=3.1.6",
    "pydantic>=2.11.9",
    "tenacity>=9.1.2",
]

[project.urls]
Homepage = "https://github.com/christo-olivier/modelsmith"
Repository = "https://github.com/christo-olivier/modelsmith"
Documentation = "https://christo-olivier.github.io/modelsmith"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "mypy>=1.18.1",
    "python-dotenv>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mike>=2.1.3",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
markers = [
    "sequential: mark test to run sequentially for specific parameters"
]
